Updated responsive design to correct errors and display on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,12 @@ $shrink-view: 1025px;
       flex-direction: column;
       align-items: center;
     }
+    @media (max-width: $break-medium) {
+      font-size: 24rem;
+    }
+    @media (max-width: $break-small) {
+      font-size: 15rem;
+    }
   }
 }
 
